syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//菜单
service SysMenu {
  //菜单-创建一条数据
  rpc CreateSysMenu(CreateSysMenuReq) returns (CreateSysMenuReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_menu/create"
      body: "*"
    };
  }
  //菜单-更新一条数据
  rpc UpdateSysMenu(UpdateSysMenuReq) returns (UpdateSysMenuReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_menu/update"
      body: "*"
    };
  }
  //菜单-更新状态
  rpc UpdateSysMenuStatus(UpdateSysMenuStatusReq) returns (UpdateSysMenuStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_menu/update/status"
      body: "*"
    };
  }
  //菜单-删除一条数据
  rpc DeleteSysMenu(DeleteSysMenuReq) returns (DeleteSysMenuReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_menu/delete"
      body: "*"
    };
  }
  //菜单-单条数据查询
  rpc GetSysMenuInfo(GetSysMenuInfoReq) returns (GetSysMenuInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_menu/info"};
  }
  //菜单-列表数据查询
  rpc GetSysMenuList(GetSysMenuListReq) returns (GetSysMenuListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_menu/list"};
  }
}

//菜单信息
message SysMenuInfo {
  string id = 1; // id
  string pid = 2; // 上级菜单
  string name = 3; // 菜单名称
  string type = 4; // 菜单类型(dir,menu,button)
  string path = 5; // 路由路径
  string permission = 6; // 权限标识
  string icon = 7; // 图标
  string component = 8; // 组件路径
  string componentName = 9; // 组件名
  int32 sort = 10; // 权重(排序)
  int32 status = 11; // 0=禁用 1=开启
  string createdAt = 12; // 创建时间
  string updatedAt = 13; // 更新时间
}

//请求-菜单-创建一条数据
message CreateSysMenuReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "name",
        "type",
        "sort"
      ]
    }
  };

  string pid = 1 [(buf.validate.field).string = {
    min_len: 0
    max_len: 36
  }]; // 上级菜单
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 菜单名称
  string type = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 菜单类型(dir,menu,button)
  string path = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
    }
  ]; // 路由路径
  string permission = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 50
    }
  ]; // 权限标识
  string icon = 6 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 50
    }
  ]; // 图标
  string component = 7 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
    }
  ]; // 组件路径
  string componentName = 8 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
    }
  ]; // 组件名
  int32 sort = 9 [(buf.validate.field).int32 = {
    gt: 0
    lte: 1000
  }]; // 权重(排序)
  int32 status = 10 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; //状态 -1=禁用 1=开启
}

//响应-菜单-创建一条数据
message CreateSysMenuReply {
  string id = 1; // id
}

//请求-菜单-更新一条数据
message UpdateSysMenuReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "name",
        "type",
        "sort"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 36
  }]; // id
  string pid = 2 [(buf.validate.field).string = {
    min_len: 0
    max_len: 36
  }]; // 上级菜单
  string name = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 菜单名称
  string type = 4 [(buf.validate.field).string = {
    min_len: 1
    max_len: 50
  }]; // 菜单类型(dir,menu,button)
  string path = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
    }
  ]; // 路由路径
  string permission = 6 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 50
    }
  ]; // 权限标识
  string icon = 7 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 50
    }
  ]; // 图标
  string component = 8 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
    }
  ]; // 组件路径
  string componentName = 9 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 100
    }
  ]; // 组件名
  int32 sort = 10 [(buf.validate.field).int32 = {
    gt: 0
    lte: 1000
  }]; // 权重(排序)
  int32 status = 11 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; //状态 -1=禁用 1=开启
}

//响应-菜单-更新一条数据
message UpdateSysMenuReply {}

//请求-菜单-更新状态
message UpdateSysMenuStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  int32 status = 2 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; //状态 -1=禁用 1=开启
}

//响应-菜单-更新状态
message UpdateSysMenuStatusReply {}

//请求-菜单-删除一条数据
message DeleteSysMenuReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id集合
}

//响应-菜单-删除一条数据
message DeleteSysMenuReply {}

//请求-菜单-单条数据查询
message GetSysMenuInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-菜单-单条数据查询
message GetSysMenuInfoReply {
  SysMenuInfo info = 1;
}

//请求-菜单-列表数据查询
message GetSysMenuListReq {}

//响应-菜单-列表数据查询
message GetSysMenuListReply {
  int32 total = 1; //总数
  repeated SysMenuInfo list = 2; // 列表数据
}
